--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -33,10 +33,12 @@
             font-weight: 300;
         }
         &__descr {
-            max-width: 440px;
+            max-width: 390px;
+            height: 95px;
             font-family: 'Roboto';
             font-size: 11px;
             font-weight: 600;
+            overflow: hidden;
         }
         .decor {
             &__circle {
